Changelog
=========

4.1.2 (unreleased)
------------------

- Display the translation of the folder default page in the current language
  when the folder is neutral.

- Avoid problems when setLanguage is given a null value that is not ''.

  [thomasdesvenain]


4.1.1 (2011-11-15)
------------------

- New translations still had no proper id.
  fix http://plone.org/products/linguaplone/issues/246
  [gotcha]


4.1 (2011-11-14)
----------------

- New translations did not get a proper id.
  fix http://plone.org/products/linguaplone/issues/246
  [jfroche]

- Check 'Add portal content' permission on parent to display translate menu items.
  Check 'Delete objects' on parent or 'Modify portal content' on content
  to display "Manage translations" menu itme.
  Check user has one of those permissions to display menu.
  Refs http://dev.plone.org/plone/ticket/12223.
  [thomasdesvenain]

- Update to require Plone 4.1.
  [hannosch]

- Notify p.a.caching to purge translations when the canonical object is purged.
  [ggozad, stefan]

- Changed permission for the controlpanel to `plone.app.controlpanel.Language`.
  This allows users with the `Site Administrator` role to access it.
  [toutpt]

4.0.4 - 2011-07-25
------------------

- Selector should not propose link to inaccessible content (content for which
  the user does not have View permission). If a translation exist but is
  inaccessible, follow the acquisition chain until a translated item is
  accessible. In case we get to an inaccessible INavigationRoot, do not show
  the language at all.
  [gotcha]

- Removed broken icons and fix invalid XHTML in translation browser popup.
  [hannosch]

- Link to translation browser popup was broken in some VirtualHost setups.
  This closes http://plone.org/products/linguaplone/issues/277.
  [tgraf, hannosch]

- Use template parameter in language selector's viewlet zcml declaration. This
  makes it easier to customize in add-ons. The change requires plone.app.i18n
  2.0.1 or greater.